<resources>
    <string name="app_name">BansosPlus</string>
    <string name="app_title">BansosPlus</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_nik">521000*****21</string>
    <string name="dummy_kk">621000**********21</string>
    <string name="bansos">Bansos</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="alert_invalid_email">Email ini invalid!</string>
    <string name="alert_invalid_phone">Nomor HP ini invalid!</string>
    <string name="alert_invalid_kk">Nomor KK ini invalid!</string>
    <string name="alert_invalid_nik">NIK ini invalid!</string>
    <string name="alert_password_less">Minimal 8 karakter!</string>
    <string name="email_anda">Email Anda</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="failed_get_detail">Failed to get bansos details</string>
    <string name="no_bansos_id">No bansosId found in the intent</string>
    <string name="login_success">Login Sukses</string>
    <string name="login_failed">Login Gagal</string>
    <string name="register_success">Berhasil Registrasi Akun</string>
    <string name="register_failed_response">Registrasi Akun Gagal</string>
    <string name="register_failed_pass_not_match">Password tidak sesuai</string>
    <string name="jenis_bantuan">Jenis Bantuan :</string>
    <string name="ulasan_penerima_bantuan">Ulasan Penerima Bantuan</string>
    <string name="deskripsi_bantuan">Deskripsi Bantuan</string>
    <string name="kebutuhan_pokok">Kebutuhan Pokok</string>
    <string name="batas_pendaftaran">Batas Pendaftaran:</string>
    <string name="paket_sembako_covid_19">Paket Sembako Covid-19</string>
    <string name="diambil_pada">Diambil pada :</string>
    <string name="diterima_pada">Diterima pada :</string>
    <string name="kode_qr">Kode QR</string>
    <string name="isi_data_pribadi_anda">Isi Data Pribadi Anda</string>
    <string name="data_pribadi_desc">Data pribadi Anda digunakan untuk verifikasi bantuan yang diajukan</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_kk">Nomor Kartu Keluarga</string>
    <string name="penghasilan">Penghasilan per Tahun</string>
    <string name="luas_lantai">Luas Lantai</string>
    <string name="kualitas_dinding">Kualitas Dinding</string>
    <string name="jumlah_makan">Jumlah Makan dalam Sehari</string>
    <string name="bahan_bakar">Bahan Bakar di Rumah</string>
    <string name="pendidikan">Pendidikan Terakhir</string>
    <string name="aset">Jumlah Aset</string>
    <string name="kemampuan_berobat">Kemampuan Berobat</string>
    <string name="tanggungan">Jumlah Tanggungan</string>
    <string name="ajukan_bantuan">Ajukan Bantuan</string>
    <string name="pendaftaran_akun_bansosplus">Pendaftaran Akun BansosPlus</string>
    <string name="pendaftaran_desc">Bersiap bergabung di BansosPlus</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="to_login">Sudah memiliki akun?</string>
    <string name="data_policy1">Dengan mendaftar Anda setuju dengan,</string>
    <string name="data_policy2">Ketentuan dan Kebijakan Privasi</string>
    <string name="cek_status_pengajuan_bantuan">Cek status pengajuan bantuan</string>
    <string name="histori_pengajuan">Histori Pengajuan Bantuan</string>
    <string name="halo">Halo,</string>
    <string name="user">Pak RT !</string>
    <string name="list_bansos">List Bansos</string>
    <string name="validasi_bantuan">Validasi Bantuan</string>
    <string name="update_profile">Update Profile</string>
    <string name="bantuan_makanan_pokok">Bantuan Makanan Pokok</string>
    <string name="tanggal_pendaftaran">Tanggal pendaftaran:</string>
    <string name="dummy_tgl_pendaftaran">2024/04/15</string>
    <string name="dummy_status_bansos">DALAM PROSES</string>


</resources>