<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="347dp"
        android:layout_height="124dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="349dp"
            android:layout_height="match_parent"
            android:background="@color/light_yellow">


            <ImageView
                android:id="@+id/bansosImage"
                android:layout_width="99dp"
                android:layout_height="108dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blt" />


            <TextView
                android:id="@+id/bansosName"
                android:layout_width="189dp"
                android:layout_height="30dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:padding="5dp"
                android:text="@string/bantuan_makanan_pokok"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toEndOf="@+id/bansosImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/expiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:padding="5dp"
                android:text="@string/tanggal_pendaftaran"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toEndOf="@+id/bansosImage" />

            <TextView
                android:id="@+id/expiryDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:padding="5dp"
                android:text="@string/dummy_tgl_pendaftaran"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/expiryDate" />

            <ImageView
                android:id="@+id/registrationStatus_level"
                android:layout_width="147dp"
                android:layout_height="32dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintTop_toBottomOf="@+id/expiryDateText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_stastus_diproses"/>

            <TextView
                android:id="@+id/registrationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/dummy_status_bansos"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/registrationStatus_level"
                app:layout_constraintStart_toStartOf="@+id/registrationStatus_level"
                app:layout_constraintBottom_toBottomOf="@+id/registrationStatus_level"
                app:layout_constraintEnd_toEndOf="@+id/registrationStatus_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>